syntax = "proto3";

package user;

option go_package = "grpc-example/proto";

// User service definition
service UserService {
  // Get user by ID
  rpc GetUser (GetUserRequest) returns (User);

  // List all users
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);

  // Create new user
  rpc CreateUser (CreateUserRequest) returns (User);

  // Stream users (server streaming)
  rpc StreamUsers (ListUsersRequest) returns (stream User);
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
}

message GetUserRequest {
  int32 id = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}
